@@ -58,6 +58,8 @@
 						<!-- Minimal supported version is 2.4 -->
 						<version>2.13</version>
 						<configuration>
+							<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC
+								-XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
 							<properties>
 								<property>
 									<name>listener</name>
@@ -74,6 +76,8 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>2.12.4</version>
 						<configuration>
+							<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC
+								-XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
 							<includes>
 								<include>**/*IntegrationTest*</include>
 							</includes>
